<resources>
    <string name="app_name">Eshop</string>
    <string name="app_version">1.0</string>
    <string name="app_copy">"@ JIAT APP "</string>

    <string name="side_nav_bar_home">Home</string>
    <string name="side_nav_bar_profile">Profile</string>
    <string name="side_nav_bar_Orders">Orders</string>
    <string name="side_nav_bar_Wishlist">Wishlist</string>
    <string name="side_nav_bar_Cart">Cart</string>
    <string name="side_nav_bar_Message">Message</string>
    <string name="side_nav_bar_Setting">Setting</string>
    <string name="side_nav_bar_Logout">Logout</string>
    <string name="side_nav_bar_LogIN">Log IN</string>


    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_Category_title">Category</string>
    <string name="bottom_nav_cart_title">Cart</string>
    <string name="bottom_nav_person_title">Person</string>
    <string name="search_hint">search_hint</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login to Eshop</string>
    <string name="froget_password">forget password</string>
    <string name="signup_title">Join Eshop</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_signup_message">Allready have an account ?</string>

</resources>