<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".activity.SignUpActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/app_logo"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/signup_title"
        android:textColor="@color/md_theme_primary"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@color/md_theme_primary"
        />

    <EditText

        android:id="@+id/signUp_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:hint="yasiru"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="text"
        android:background="@drawable/custom_input_search"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/md_theme_primary"
        />

    <EditText

        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        android:hint="user@example.com"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input_search"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="password"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/md_theme_primary"
        />

    <EditText

        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:hint="-------"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input_search"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Password must contain at least 8 characters"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/md_theme_primary"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Retype Password"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textColor="@color/md_theme_primary"
        />

    <EditText

        android:id="@+id/retype_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:hint="-------"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/custom_input_search"

        />

    <Button
        android:id="@+id/signup_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_sign_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/text_signup_message"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/signup_btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_sign_in"/>

</LinearLayout>